--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -213,5 +213,5 @@
 <script src="./js/zepto.min.js"></script>
 <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="https://res.wx.qq.com/open/libs/weuijs/1.0.0/weui.min.js"></script>
-<script src="./js/index.js"></script>
+<script src="./js/index.js?ver=3"></script>
 </html>
