--- a/public/scratchoff/index.html
+++ b/public/scratchoff/index.html
@@ -183,7 +183,7 @@
         </div>
     </div>
     <script src="js/lib/jquery-1.11.3.min.js"></script>
-    <script src="js/page/canvans-20181128"></script>
+    <script src="js/page/canvans-20181128.js"></script>
 </body>
 
 </html>
